--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <HTML>
   <head>
     <title>Luke Hulsebus' Website</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
 <body>
   <p>Hello</p>
+  <div class="image-container">
+    <img src="your-image.jpg" alt="Your Image">
+  </div>
 </body>
 </HTML>
