--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <p>Hello</p>
   <div class="image-container">
-    <img src="your-image.jpg" alt="Your Image">
+    <img src="images/placeholder1.png" alt="Your Image">
   </div>
 </body>
 </HTML>
