--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
 <body>
-  <p>Hello</p>
   <div class="image-container">
-    <img src="images/placeholder1.png" alt="Your Image">
-  </div>
+    <a href="https://www.linkedin.com/in/lukejhulsebus/">
+        <img src="images/linkedinPIXEL.png" alt="Your Image">
+    </a>
+</div>
 </body>
 </HTML>
