Alt Text changed for linkedin icon

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <div class="image-container">
     <a href="https://www.linkedin.com/in/lukejhulsebus/">
-        <img src="images/linkedinPIXEL.png" alt="Your Image">
+        <img src="images/linkedinPIXEL.png" alt="Hand drawn pixel Linkedin logo">
     </a>
 </div>
 </body>
