Text change, fixed background size, and added icon format through <table>

--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE HTML>
-<HTML>
+<HTML lang="en">
   <head>
     <title>Luke Hulsebus' Website</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 <body>
-  <div class="image-container">
-    <a href="https://www.linkedin.com/in/lukejhulsebus/">
-        <img src="images/linkedinPIXEL.png" alt="Hand drawn pixel Linkedin logo">
-    </a>
-</div>
+  <div>
+    <table>
+      <tr>
+        <td><div class="iconText">About Me</div></td>
+        <td><div class="iconText">Skills</div></td>
+        <td><div class="iconText">Resume.pdf</div></td>
+      </tr>
+      <tr>
+        <td><div class="iconText">LinkedIn</div></td>
+        <td><div class="iconText">GitHub</div></td>
+      </tr>
+    </table>
+  </div>
 </body>
 </HTML>
