Testing spacing of the icons and text.

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   <div>
     <table>
       <tr>
-        <td><div class="iconText">About Me</div></td>
-        <td><div class="iconText">Skills</div></td>
-        <td><div class="iconText">Resume.pdf</div></td>
+        <td><div class="icon"><img src="images/linkedinPIXEL.png"><p>About Me</p></div></td>
+        <td><div class="icon"><img src="images/linkedinPIXEL.png"><p>Skills</p></div></td>
+        <td><div class="icon"><img src="images/linkedinPIXEL.png"><p>Resume.pdf</p></div></td>
       </tr>
       <tr>
-        <td><div class="iconText">LinkedIn</div></td>
-        <td><div class="iconText">GitHub</div></td>
+        <td><div class="icon"><img src="images/linkedinPIXEL.png"><p>LinkedIn</p></div></td>
+        <td><div class="icon"><img src="images/linkedinPIXEL.png"><p>GitHub</p></div></td>
       </tr>
     </table>
   </div>
