--- a/index.html
+++ b/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE HTML>
-<HTML lang="en">
-  <head>
+<html lang="en">
+<head>
     <title>Luke Hulsebus' Website</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  </head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
+</head>
 <body>
   <div>
     <table>
       <tr>
-        <td><div class="icon"><img src="images/linkedinPIXEL.png"><p>About Me</p></div></td>
-        <td><div class="icon"><img src="images/linkedinPIXEL.png"><p>Skills</p></div></td>
-        <td><div class="icon"><img src="images/linkedinPIXEL.png"><p>Resume.pdf</p></div></td>
+        <td><div class="icon"><img src="images/linkedinPIXEL.png"><p class="pixelify-sans-PixelFont">About Me</p></div></td>
+        <td><div class="icon"><img src="images/linkedinPIXEL.png"><p class="pixelify-sans-PixelFont">Skills</p></div></td>
+        <td><div class="icon"><img src="images/linkedinPIXEL.png"><p class="pixelify-sans-PixelFont">Resume.pdf</p></div></td>
       </tr>
       <tr>
-        <td><div class="icon"><img src="images/linkedinPIXEL.png"><p>LinkedIn</p></div></td>
-        <td><div class="icon"><img src="images/linkedinPIXEL.png"><p>GitHub</p></div></td>
+        <td><div class="icon"><img src="images/linkedinPIXEL.png"><p class="pixelify-sans-PixelFont">LinkedIn</p></div></td>
+        <td><div class="icon"><img src="images/linkedinPIXEL.png"><p class="pixelify-sans-PixelFont">GitHub</p></div></td>
       </tr>
     </table>
   </div>
 </body>
-</HTML>
+</html>
