Testing the bottom bar

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div>
     <table>
       <tr>
-        <td><div class="icon"><img src="images/linkedinPIXEL.png"><p class="pixelify-sans-PixelFont">About Me</p></div></td>
+        <td><a href="https://www.linkedin.com/in/lukejhulsebus/"><div class="icon"><img src="images/linkedinPIXEL.png"><p class="pixelify-sans-PixelFont">About Me</p></div></a></td>
         <td><div class="icon"><img src="images/linkedinPIXEL.png"><p class="pixelify-sans-PixelFont">Skills</p></div></td>
         <td><div class="icon"><img src="images/linkedinPIXEL.png"><p class="pixelify-sans-PixelFont">Resume.pdf</p></div></td>
       </tr>
@@ -23,5 +23,6 @@
       </tr>
     </table>
   </div>
+<div class="bottomBar">Lol</div>
 </body>
 </html>
