Text I forgot to add

--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
       </tr>
     </table>
   </div>
-<div class="bottomBar">Lol</div>
+<div class="bottomBar"><p>Some text for a test I forgot to add</p></div>
 </body>
 </html>
