Finally fixed some positions and added the "footer"

--- a/index.html
+++ b/index.html
@@ -10,19 +10,24 @@
     <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div>
+  <div class="bigDiv">
     <table>
       <tr>
-        <td><a href="https://www.linkedin.com/in/lukejhulsebus/"><div class="icon"><img src="images/linkedinPIXEL.png"><p class="pixelify-sans-PixelFont">About Me</p></div></a></td>
+        <td><div class="icon"><img src="images/linkedinPIXEL.png"><p class="pixelify-sans-PixelFont">About Me</p></div></td>
         <td><div class="icon"><img src="images/linkedinPIXEL.png"><p class="pixelify-sans-PixelFont">Skills</p></div></td>
         <td><div class="icon"><img src="images/linkedinPIXEL.png"><p class="pixelify-sans-PixelFont">Resume.pdf</p></div></td>
       </tr>
       <tr>
-        <td><div class="icon"><img src="images/linkedinPIXEL.png"><p class="pixelify-sans-PixelFont">LinkedIn</p></div></td>
+        <td><a href="https://www.linkedin.com/in/lukejhulsebus/"><div class="icon"><img src="images/linkedinPIXEL.png"><p class="pixelify-sans-PixelFont">LinkedIn</p></div></a></td>
         <td><div class="icon"><img src="images/linkedinPIXEL.png"><p class="pixelify-sans-PixelFont">GitHub</p></div></td>
       </tr>
     </table>
   </div>
+<!--A div to help me test the size of things and where they are.-->
+<!--<div style="background-color: red; width: 100px; height: 1000px;">s</div>-->
+<div class="footer">
+    <p>Author: Hege Refsnes<br>
+    <a href="mailto:hege@example.com">hege@example.com</a></p>
+</div>
 </body>
-<div class="bottomBar"><p>Some text for a test I forgot to add</p></div>
 </html>
