--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
 <!--A div to help me test the size of things and where they are.-->
 <!--<div style="background-color: red; width: 100px; height: 1000px;">s</div>-->
 <div class="footer">
-    <p>Author: Hege Refsnes<br>
-    <a href="mailto:hege@example.com">hege@example.com</a></p>
+    <p>Author: Luke Hulsebus<br>
+    <a href="mailto:hege@example.com">ljhulsebus02@gmail.com</a><br>
+      (269)808-6917</p>
 </div>
 </body>
 </html>
