--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
 <!--<div style="background-color: red; width: 100px; height: 1000px;">s</div>-->
 <div class="footer">
     <p>Author: Luke Hulsebus<br>
-    <a href="mailto:hege@example.com">ljhulsebus02@gmail.com</a><br>
-      (269)808-6917</p>
+    <a href="mailto:hege@example.com">ljhulsebus02@gmail.com</a></p>
 </div>
 </body>
 </html>
