--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <table>
       <tr>
         <td><div class="icon"><img src="images/AboutMe.png"><p class="pixelify-sans-PixelFont">About Me</p></div></td>
-        <td><div class="icon"><img src="images/linkedinPIXEL.png"><p class="pixelify-sans-PixelFont">Skills</p></div></td>
+        <td><div class="icon"><img src="images/Skills.png"><p class="pixelify-sans-PixelFont">Skills</p></div></td>
         <td><div class="icon"><img src="images/linkedinPIXEL.png"><p class="pixelify-sans-PixelFont">Resume.pdf</p></div></td>
       </tr>
       <tr>
