--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       <tr>
         <td><div class="icon"><img src="images/AboutMe.png"><p class="pixelify-sans-PixelFont">About Me</p></div></td>
         <td><div class="icon"><img src="images/Skills.png"><p class="pixelify-sans-PixelFont">Skills</p></div></td>
-        <td><div class="icon"><img src="images/linkedinPIXEL.png"><p class="pixelify-sans-PixelFont">Resume.pdf</p></div></td>
+        <td><div class="icon"><img src="images/resume.png"><p class="pixelify-sans-PixelFont">Resume.pdf</p></div></td>
       </tr>
       <tr>
         <td><a href="https://www.linkedin.com/in/lukejhulsebus/"><div class="icon"><img src="images/linkedinPIXEL.png"><p class="pixelify-sans-PixelFont">LinkedIn</p></div></a></td>
-        <td><div class="icon"><img src="images/linkedinPIXEL.png"><p class="pixelify-sans-PixelFont">GitHub</p></div></td>
+        <td><a href="https://github.com/0tterMan"><div class="icon"><img src="images/GitHub.png"><p class="pixelify-sans-PixelFont">GitHub</p></div></a></td>
       </tr>
     </table>
   </div>
@@ -27,7 +27,7 @@
 <!--<div style="background-color: red; width: 100px; height: 1000px;">s</div>-->
 <div class="footer">
     <p>Author: Luke Hulsebus<br>
-    <a href="mailto:hege@example.com">ljhulsebus02@gmail.com</a></p>
+    <a href="ljhulsebus02@gmail.com">ljhulsebus02@gmail.com</a></p>
 </div>
 </body>
 </html>
