changed wording in ResumeContent

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <img id="resumeExitButton" class="exitButton" src="images/exit.png" alt="Exit Button" style="width: 3.25%; height: 10%;">
   <!-- Content of the div -->
   <h2>Resume</h2>
-  <p>Would you like to download the resume?</p>
+  <p>Would you like to View my resume?</p>
   <button id="resumeYesButton">Yes</button>
   <button id="resumeNoButton">No</button>
 </div>
