added meta description, added meta title, seo

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <title>Luke Hulsebus' Website</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="UTF-8">
+    <meta name="title" content="Luke Hulsebus Profile Website">
+    <meta name="description" content="Discover Luke Hulsebus' skills, experiences, and resume here on his profile website.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
-    <script src="script.js"></script> <!-- Add this line -->
+    <script src="script.js"></script> 
 </head>
 <body>
   <div class="bigDiv">
