Update index.html text

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       and for my other non-digital passions! I was in the Boy Scouts for 7 years; I participated in my high school drum line where<br>
       I played the bass drum; I played on a travel soccer team for 10 years; I boxed and practiced martial arts for 14 years; and I <br>
       tried every sport under the sun. But I always came back to my computer. Every night, after every major life event, after every<br>
-      low point, I always came back to the game that started it all on the machine that made each time logging on so memorable. <br><br>
+      low point. I always came back to the game that started it all; on the machine that made each time logging on so memorable. <br><br>
       
       After a long time of moving around, finding myself in people that I never dreamed I'd meet, learning skills I never thought<br>
       I'd use it again, I ended up back here again. At my computer, with the same old friends playing the same old game. And to be honest,<br>
@@ -97,7 +97,7 @@
 <div id="resumeContent" class="hidden">
   <img id="resumeExitButton" class="exitButton" src="images/exit.png" alt="Exit Button" style="width: 3.25%; height: 10%;">
   <h2>Resume</h2>
-  <p>Would you like to download the resume?</p>
+  <p>Would you like to see my resume?</p>
   <button id="resumeYesButton">Yes</button>
   <button id="resumeNoButton">No</button>
 </div>
